--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,4 +1,12 @@
-<
+<!DOCTYPE html>
+<html lang="en">
+
+{% extends "base.html" %}
+
+{% block content %}
+
+{% load static %}
+
   <section id="register" class="bg-light py-5">
     <div class="container">
       <div class="row">
@@ -45,3 +53,7 @@
       </div>
     </div>
   </section>
+
+{% endblock %}
+
+</html>>
