--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{% url 'logout' %}"><i class="fa fa-btn fa-sign-out"></i>Logout</a></li>
+                             <li><a href="{% url 'change_password'%}">Change password</a></li>
                         </ul>
                     </li>
                 {% else %}
