--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -18,18 +18,33 @@
           </li>
         </ul>
 
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mr-3">
-            <a class="nav-link" href="{% url 'register' %}">
-              <i class="fas fa-user-plus"></i> Register</a>
-          </li>
-          <li class="nav-item mr-3">
-            <a class="nav-link" href="{% url 'login' %}">
-              <i class="fas fa-sign-in-alt"></i>
+          {% if user.is_authenticated %}
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link dropdown-toggle" href="#" id="userMenu"\
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded\
+              ="false">
+                {{ user.username }}
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="{% url 'change_password'%}">
+                        Change password</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
+{#                <a class="dropdown-item" href="{% url 'change_password'%}">#}
+{#                    Change password</a>#}
+              </div>
+            </li>
+          </ul>
+        {% else %}
+          <form class="form-inline ml-auto">
+            <a href="{% url 'register' %}" class="btn btn-primary ml-2">
+            Register</a>
+            <a href="{% url 'login' %}" class="btn btn-outline-secondary">
+            Log In</a>
+          </form>
+        {% endif %}
 
-              Login</a>
-          </li>
-        </ul>
       </div>
     </div>
   </nav>
+
