--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -16,7 +16,7 @@
   background-image: url("https://www.powerdms.com/wp-content/uploads/2017/09/powerdms-assets-photos-285-fire-737x394.jpg");
 
   /* Set a specific height */
-  min-height: 500px;
+  min-height: 430px;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -25,7 +25,7 @@
   background-size: cover;
 }
 .navbar {
-             
+             position: fixed;  Set the navbar to fixed position */
              top: 0; /* Position the navbar at the top of the page */
              width: 100%; /* Full width */
             margin-bottom: 0;
