--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,16 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'index' %}">Home</a></li>
-                <li><a href="{% url 'forms' %}">Forms</a></li>
                <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="{% url 'contact' %}">Contact Us</a></li>
+
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                    <li><a href="{% url 'forms' %}">Forms</a></li>
+                    <li><a href="{% url 'uploadforms' %}">Upload Forms</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                             <span class="caret"></span>
