--- a/templates/customerpages/enrolled_events.html
+++ b/templates/customerpages/enrolled_events.html
@@ -10,7 +10,7 @@
         <div class="col-md-12">
           <h2>Welcome {{ user.username }}</h2>
             {% if enrollments %}
-              <p>bellow are the list of places you are enrolled in </p>
+              <p>LIst of Events you have enrolled </p>
               <table class="table">
                 <thead>
                   <tr>
