--- a/templates/employeepages/enrollment_list.html
+++ b/templates/employeepages/enrollment_list.html
@@ -13,7 +13,7 @@
 
 
       <div class="row">
-        <h2 style="padding-left: 15Px">Events conducted </h2>
+        <h2 style="padding-left: 15Px"> List of Users enrolled for events </h2>
     </div>
     <div>
         <table class="table table-striped table-bordered table-hover">
