--- a/templates/events/event.html
+++ b/templates/events/event.html
@@ -7,13 +7,13 @@
         <div class="col-md-10"><h1 class="display-4">Section name: {{ event.event_name }}</h1>
 
             <div class="row mb-5">
-            <div class="col-md-2">
-              description:{{ event.description }}
+            <div class="col-md-10">
+             <h4> Description:{{ event.description }}</h4>
             </div>
           </div>
 
           <p class="lead">
-            <i class="fas fa-map-marker"></i>Branch:{{ event.branch }}</p>
+            <i class="fas fa-map-marker"></i>Location:{{ event.branch }}</p>
         </div>
       </div>
     </div>
@@ -22,7 +22,7 @@
 
 
     <div class="row">
-        <h2 style="padding-left: 15Px">Classes  Information</h2>
+        <h2 style="padding-left: 15Px">Event  Details</h2>
     </div>
     <div>
         <table class="table table-striped table-bordered table-hover">
