--- a/templates/customerpages/enrolledevent_delete.html
+++ b/templates/customerpages/enrolledevent_delete.html
@@ -1,4 +1,5 @@
 {% block body_block %}
+    {% if.user.profile.id_customer %}
     <h1>Delete {{ enrollment.name }}?</h1>
 
     <form method="post">
@@ -7,6 +8,9 @@
         <a href="{% url 'enrolled_events' %} ">Cancel</a>
 
     </form>
+    {% else %}
+    you cannot access this page
+    {% endif %}
 
 {% endblock %}
 
