--- a/templates/employeepages/enrollment_list.html
+++ b/templates/employeepages/enrollment_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-
+{% if user.profile.id_employee %}
 
 <section id="listings" class="py-4">
     <div class="container">
@@ -70,4 +70,7 @@
       </div>
     </div>
 </section>
+    {% else %}
+    you cannot access this page
+    {% endif %}
 {% endblock %}
