--- a/templates/employeepages/event_delete.html
+++ b/templates/employeepages/event_delete.html
@@ -1,4 +1,5 @@
  {% block body_block %}
+    {% if user.profile.is_employee %}
     <h1>Delete {{ event.name }}?</h1>
 
     <form method="post">
@@ -7,5 +8,8 @@
         <a href="{% url 'events' %} ">Cancel</a>
 
     </form>
+        {% else %}
+        you cannot access this page
+    {% endif %}
 
 {% endblock %}
