--- a/templates/employeepages/event_update.html
+++ b/templates/employeepages/event_update.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+    {% if user.profile.is_employee %}
     <h1>Edit Event</h1>
     <form method="POST" class="service-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Update</button>
     </form>
+    {% else %}
+        you cannot acces this page
+    {% endif %}
 {% endblock %}
