--- a/templates/customerpages/enrolled_events.html
+++ b/templates/customerpages/enrolled_events.html
@@ -44,6 +44,7 @@
                 {% endfor %}
                 </tbody>
               </table>
+                {% else %}
 
                 <p>you have not yet made any inquery </p>
             {% endif %}
